--- a/index.html
+++ b/index.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <section>
-            <div class='div1'>
-                <h1>Calvin Kim</h1>
-                <p>Software Engineer</p>
+            <div class='help-section'>
+                <p class='help-p'>Click on the pages to turn  ---></p>
             </div>
-            <div class='div2'>
+            <div class='div1 div-container'>
+                <div class='comic-issue'>
+                    <h3 class='issue-title'>Hacker-Man #1</h3>
+                </div>
+                <h1 class='name'>Calvin Kim</h1>
+                <p class='name'>The Quest For Opportunity</p>
+                <img class='skyline-img' src="https://cdn.pixabay.com/photo/2016/01/02/01/17/city-1117433_960_720.png" alt='city skyline'/>
+                <img class='comic-bubbles bubble1' src='/assets/draw3.png'/>
+                <img class='comic-bubbles bubble2' src='/assets/draw2.png'/>
+                <img class='comic-bubbles bubble3' src='/assets/draw1.png'/>
+            </div>
+            <div class='div1back div-container'>
+                <div class='div-small-container'>
+                   <h1>page 1 back</h1> 
+                </div> 
+            </div>
+            <div class='div2 div-container'>
                 <h1>About</h1>
                 <p>I'm Calvin</p>
             </div>  
-            <div class='div3'>
+            <div class='div2back div-container'>
+                <div class='div-small-container'>
+                    <h1>page 2 back</h1> 
+                </div> 
+            </div>
+            <div class='div3 div-container'>
                 <h1>Skills</h1>
                 <p>I know React</p>
-            </div> 
-            <div class='div4'>
+            </div>
+            <div class='div3back div-container'>
+                <div class='div-small-container'>
+                    <h1>page 3 back</h1> 
+                </div> 
+            </div>
+            <div class='div4 div-container'>
                 <h1>Projects</h1>
                 <p>Haggle</p>
             </div>
-            <div class='div5'>
-                <h1>Contacts</h1>
-                <p>Contact</p>
+            <div class='div4back div-container'>
+                <div class='div-small-container'>
+                    <p class='add-info'>If you need any additional information, please do not hesitate to reach out at any time. I am looking forward to new and amazing opportunities. Thank you for your time and consideration.</> 
+                </div> 
+            </div>
+            <div class='div5 div-container'>
+                <!-- <h1 class='contact-title'>Contact</h1> -->
+                <input type="text" placeholder='Email'/>
+                <input type="text" placeholder='Subject'/>
+                <textarea placeholder='Content'></textarea>
+                <button class='input-button'>Send</button>
             </div>  
         </section>
         <script src='script.js'></script>
