--- a/index.html
+++ b/index.html
@@ -25,40 +25,91 @@
             </div>
             <div class='div1back div-container'>
                 <div class='div-small-container'>
-                    <!-- <div class='first-panel panel'>This is the story of an ambitious software engineer named Calvin Kim who is passionate about learning new concepts within the development space...</div> -->
-                    <!-- <div class='second-panel panel'>Before Calvin started to code, he was a night-time stocker at a Grocery Store</div> -->
-                    <!-- <div class='third-panel panel'>But the desire to strive to better pushed him to learn coding specifically Java</div> -->
+                    <div class='first-panel panel'>This is the story of an ambitious software engineer named Calvin Kim who is passionate about learning new concepts within the development space...</div>
+                    <div class='second-panel panel'>Before Calvin started to code, he was a night-time stocker at a Grocery Store</div>
+                    <div class='fourth-panel panel'>and thus came HACKER-MAN</div>
+                    <div class='third-panel panel'>But the desire to strive to better pushed him to learn coding specifically Java</div>
+                    
                 </div> 
             </div>
             <div class='div2 div-container'>
-                <h1>About</h1>
-                <p>I'm Calvin</p>
+                <div class='fifth-panel panel'>Using his abilities with java and the newly learned Libgdx framework...</div>
+                <div class='sixth-panel panel'>He created multiple mobile games for android</div>
+                <div class='seventh-panel panel'>The first one he created was Jumperfall</div>
+                <div class='eigth-panel panel'>The second one was called Rusty Carnival</div>
+                <div class='ninth-panel panel'>There were a few more he created but did not finish</div>
+                <div class='tenth-panel panel'>The last one he created was CircleVSquare</div>
             </div>  
             <div class='div2back div-container'>
                 <div class='div-small-container'>
-                    <h1>page 2 back</h1> 
+                    <div class='eleventh-panel panel'>After creating games he felt the desire to learn new things</div>
+                    <div class='twelfth-panel panel'>So he learned web development</div>
+                    <div class='thirteenth-panel panel'>With a variety of new skills he created more projects</div>
                 </div> 
             </div>
             <div class='div3 div-container'>
-                <h1>Skills</h1>
-                <p>I know React</p>
+                <div class='fourteenth-panel panel'>
+                    <a href='http://haggle-app.surge.sh/' class='indiv-container' target="_blank">
+                        <img class='project-image' src='https://user-images.githubusercontent.com/10161700/59198522-edd8ae80-8b61-11e9-96f0-00425e7eda0c.png' alt='haggle' />
+                        <div class='project-desc'>
+                            <h4 class='project-name'>Haggle</h4>
+                            <h5 class='project-name2'>Description: A marketplace to trade items</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class='fifteenth-panel panel'>
+                    <a href='http://best-l-i-f-e.surge.sh/' class='indiv-container' target="_blank">
+                        <img class='project-image' src='https://raw.githubusercontent.com/Calvinkim4/best-life/master/wireframes/screenshot.png' alt='best life' />
+                        <div class='project-desc'>
+                            <h2 class='project-name'>Best Life</h2>
+                            <h3 class='project-name2'>Description: A calorie counter application where users can add entries of what they ate and its calories, as well as, exercises done and calories lost</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class='sixteenth-panel panel'>
+                    <a href='https://calvinkim4.github.io/Real-Life/' class='indiv-container' target="_blank">
+                        <img class='project-image' src='https://raw.githubusercontent.com/Calvinkim4/Real-Life/master/screenshot.png' alt='real life' />
+                        <div class='project-desc'>
+                            <h4 class='project-name'>Real Life</h4>
+                            <h5 class='project-name2'>Description: Multiplayer game where each player is in a different economic class. Each turn is an opportunity to make or lose money</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class='seventeenth-panel panel'>
+                    <a href='https://epic-jones-4619fa.netlify.com/' class='indiv-container' target="_blank">
+                        <img class='project-image' src='https://user-images.githubusercontent.com/10161700/59555355-cd07c300-8f7e-11e9-97bb-681116c446c8.png' alt='made2fit' />
+                        <div class='project-desc'>
+                            <h2 class='project-name'>Made2Fit</h2>
+                            <h3 class='project-name2'>Description: A clothing store that saves user's measurements</h3>
+                        </div>
+                    </a>
+                </div>
             </div>
             <div class='div3back div-container'>
                 <div class='div-small-container'>
-                    <h1>page 3 back</h1> 
+                    <div class='eighteenth-panel panel'>He was able to create these projects with the help of fellow engineers and ux/ui designers</div>
+                    <div class='nineteenth-panel panel'>group of ux designers</div>
+                    <div class='twentieth-panel panel'>group of engineers</div>
                 </div> 
             </div>
             <div class='div4 div-container'>
-                <h1>Projects</h1>
-                <p>Haggle</p>
+                <div class='twentyfirst-panel panel'>Currently He is trying to find new opportunites that will make him a better developer</div>
+                <div class='twentysecond-panel panel'>Whether it be for front-end or back-end</div>
+                <div class='twentythird-panel panel'>as long as it is challenge and rewarding</div>
             </div>
             <div class='div4back div-container'>
                 <div class='div-small-container'>
-                    <p class='add-info'>If you need any additional information, please do not hesitate to reach out at any time. I am looking forward to new and amazing opportunities. Thank you for your time and consideration.</> 
+                    <p class='add-info'>If you need any additional information, please do not hesitate to reach out at any time. I am looking forward to new and amazing opportunities. Thank you for your time and consideration.</p>
                 </div> 
+    
             </div>
-            <div class='div5 div-container'>
-                <!-- <h1 class='contact-title'>Contact</h1> -->
+            <div class='div5 div-container dotted-back'>
+
+                <div className='fixed-links-div'>
+                    <a class='external-links' href='https://github.com/Calvinkim4' rel="noopener noreferrer" target="_blank">Github</a>
+                    <a class='external-links' href='https://www.linkedin.com/in/calvinkim4/' rel="noopener noreferrer" target="_blank">LinkedIn</a>
+                    <a class='external-links' href='https://docdro.id/LCniEgk' rel="noopener noreferrer" target="_blank">Resume</a>
+                </div> 
                 <input type="text" placeholder='Email' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" />
                 <input type="text" placeholder='Subject' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Subject'" />
                 <textarea placeholder='Content' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Content'"></textarea>
