--- a/index.html
+++ b/index.html
@@ -16,19 +16,36 @@
                 <div class='comic-issue'>
                     <h3 class='issue-title'>Hacker-Man #1</h3>
                 </div>
-                <h1 class='name'>Calvin Kim</h1>
-                <p class='name'>The Quest For Opportunity</p>
-                <img class='skyline-img' src="https://cdn.pixabay.com/photo/2016/01/02/01/17/city-1117433_960_720.png" alt='city skyline'/>
                 <img class='comic-bubbles bubble1' src='/assets/draw3.png'/>
                 <img class='comic-bubbles bubble2' src='/assets/draw2.png'/>
                 <img class='comic-bubbles bubble3' src='/assets/draw1.png'/>
+                <h1 class='name'>Calvin Kim</h1>
+                <p class='name'>The Origin</p>
+                <img class='skyline-img' src="assets/cover.png" alt='city skyline'/>
+                <!-- <img class='skyline-img' src="https://cdn.pixabay.com/photo/2016/01/02/01/17/city-1117433_960_720.png" alt='city skyline'/> -->
             </div>
             <div class='div1back div-container'>
                 <div class='div-small-container'>
-                    <div class='first-panel panel'>This is the story of an ambitious software engineer named Calvin Kim who is passionate about learning new concepts within the development space...</div>
-                    <div class='second-panel panel'>Before Calvin started to code, he was a night-time stocker at a Grocery Store</div>
-                    <div class='fourth-panel panel'>and thus came HACKER-MAN</div>
-                    <div class='third-panel panel'>But the desire to strive to better pushed him to learn coding specifically Java</div>
+                    <div class='first-panel panel'>
+                        <div class='yellow-textbox'>
+                            This is the story of an ambitious software engineer named Calvin Kim and how he started programming
+                        </div>
+                    </div>
+                    <div class='second-panel panel'>
+                        <div class='yellow-textbox'>
+                            Before Calvin started to code, he was a night-time stocker at a Grocery Store
+                        </div>
+                    </div>
+                    <!-- <div class='fourth-panel panel'>
+                        <div class='yellow-textbox'>
+                            and thus came HACKER-MAN
+                        </div>
+                    </div> -->
+                    <div class='third-panel panel'>
+                        <div class='yellow-textbox'>
+                            During one of his usual night-time shifts, he encountered a spider...
+                        </div>
+                    </div>
                     
                 </div> 
             </div>
@@ -99,16 +116,16 @@
             </div>
             <div class='div4back div-container'>
                 <div class='div-small-container'>
-                    <p class='add-info'>If you need any additional information, please do not hesitate to reach out at any time. I am looking forward to new and amazing opportunities. Thank you for your time and consideration.</p>
+                    <p class='add-info'>If you need any additional information, please do not hesitate to reach out at any time. I am looking forward to amazing and fulfilling opportunities. </br></br> Thank you for reading!</p>
                 </div> 
     
             </div>
             <div class='div5 div-container dotted-back'>
 
-                <div className='fixed-links-div'>
-                    <a class='external-links' href='https://github.com/Calvinkim4' rel="noopener noreferrer" target="_blank">Github</a>
-                    <a class='external-links' href='https://www.linkedin.com/in/calvinkim4/' rel="noopener noreferrer" target="_blank">LinkedIn</a>
-                    <a class='external-links' href='https://docdro.id/LCniEgk' rel="noopener noreferrer" target="_blank">Resume</a>
+                <div class='fixed-links-div'>
+                    <a class='external-links' href='https://github.com/Calvinkim4' rel="noopener noreferrer" target="_blank"><i class="fab fa-github icons"></i></a>
+                    <a class='external-links' href='https://www.linkedin.com/in/calvinkim4/' rel="noopener noreferrer" target="_blank"><i class="fab fa-linkedin icons"></i></a>
+                    <a class='external-links' href='https://docdro.id/WuNDAPt' rel="noopener noreferrer" target="_blank"><i class="far fa-file icons"></i></a>
                 </div> 
                 <input type="text" placeholder='Email' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" />
                 <input type="text" placeholder='Subject' onfocus="this.placeholder = ''" onblur="this.placeholder = 'Subject'" />
@@ -117,5 +134,6 @@
             </div>  
         </section>
         <script src='script.js'></script>
+        <script src="https://kit.fontawesome.com/b8d4ce0423.js"></script>
     </body>
 </html>
