finished adding people

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class='third-panel panel'>
                         <div class='yellow-textbox'>
-                            During one of his usual night-time shifts, he encountered a spider...
+                            During one of his usual night-time shifts, he was bitten by a spider...
                         </div>
                         <img class='panel3-gif' src='assets/panel3.gif' alt='meeting spider'/>
                     </div>
@@ -71,24 +71,24 @@
                 <div class='div-small-container'>
                     <div class='eigth-panel panel'>
                         <div class='yellow-textbox'>
-                            Driving back home after work, Calvin felt a surge of energy.
-                            What's going on with me?
+                            After work, he went home and decided to study programming instead of watching shows as usual. He choose Java because it was one of most widely used language. For weeks he studied all night and all day when he wasn't at work using CodingBat and a textbook.
+                            <!-- Driving back home after work, Calvin felt a surge of energy.
+                            What's going on with me? -->
                         </div>
                     </div>
                     <div class='ninth-panel panel'>
                         <div class='yellow-textbox'>
-                            He went to bed to try to sleep it off.
+                            He started building a mobile android game using an open-source framework called Libgdx. He called the game JumperFall.
                         </div>
                     </div>
                     <div class='tenth-panel panel'>
                         <div class='yellow-textbox'>
-                            He couldn't sleep, and thought of what the spider said to him. Thoughts racing he couldn't take it anymore.
+                            He encountered many problems which caused sadness, anger, confusion, and despair but would always come victorious.
                         </div>
                     </div>
                     <div class='eleventh-panel panel'>
                         <div class='yellow-textbox'>
-                            He got up.
-                            I'm better than this.
+                            After finishing JumperFall, He built many more games and fought many enemies.
                         </div>
                     </div>
                     <!-- <div class='eleventh-panel panel'>After creating games he felt the desire to learn new things</div>
@@ -97,19 +97,19 @@
                 </div> 
             </div>
             <div class='div3 div-container'>
-                <div class='twelfth-panel panel'>
+                <div class='fourteenth-panel panel'>
                     <div class='yellow-textbox'>
-                        With his new found determination, He studied what he wanted to for a while. Programming.
+                        Calvin felt he needed to expand his knowledge so he learned web development.
                     </div>
                 </div>
-                <div class='thirteenth-panel panel'>
+                <div class='fifteenth-panel panel'>
                     <div class='yellow-textbox'>
-                        He started learning Java.
+                        With a variety of new skills. he created multiple web applications.
                     </div>
                 </div>
-                <div class='thirteenth-panel panel'>
+                <div class='sixteenth-panel panel'>
                     <div class='yellow-textbox'>
-                        Using his skills in Java and the newly learned Libgdx framework, He created multiple mobile games for Android
+                        PROJECTS
                     </div>
                 </div>
                 <!-- <div class='fourteenth-panel panel'>
@@ -151,15 +151,48 @@
             </div>
             <div class='div3back div-container'>
                 <div class='div-small-container'>
-                    <div class='eighteenth-panel panel'>He was able to create these projects with the help of fellow engineers and ux/ui designers</div>
+                    <div class='seventeenth-panel panel'>
+                        <div class='yellow-textbox'>
+                            During his time learning web development, he encountered other programmers and ux/ui designers.
+                        </div>
+                    </div>
+                    <div class='eighteenth-panel panel'>
+                        <a class='profile' href='https://christinaatai.com/' rel="noopener noreferrer" target="_blank">Christina Tai</a>
+                    </div>
+                    <div class='nineteenth-panel panel'>
+                        <a class='profile' href='https://www.kchiudesign.com/' rel="noopener noreferrer" target="_blank">Katherine Chiu</a>
+                    </div>
+                    <div class='twentieth-panel panel'>
+                        <a class='profile' href='https://www.mckenziewarren.com/' rel="noopener noreferrer" target="_blank">Mckenzie Warren</a>
+                    </div>
+                    <div class='twentyfirst-panel panel'>
+                        <a class='profile' href='https://www.suyoungmin.com/' rel="noopener noreferrer" target="_blank">Suyoung Min</a>
+                    </div>
+                    <div class='twentysecond-panel panel'>
+                        <a class='profile' href='http://www.codeloriana.com/' rel="noopener noreferrer" target="_blank">Loriana Hines</a>
+                    </div>
+                    <div class='twentythird-panel panel'>
+                        <a class='profile' href='http://www.shenae.nyc/' rel="noopener noreferrer" target="_blank">Shenae Simmons</a>
+                    </div>
+                    <div class='twentyfourth-panel panel'>
+                        <a class='profile' href='http://jackgay.herokuapp.com/' rel="noopener noreferrer" target="_blank">Jack Gay</a>
+                    </div>
+                    <div class='twentyfifth-panel panel'>
+                        <a class='profile' href='https://fahad-developer.com/' rel="noopener noreferrer" target="_blank">Fahad Hussain</a>
+                    </div>
+                    <!-- <div class='eighteenth-panel panel'>He was able to create these projects with the help of fellow engineers and ux/ui designers</div>
                     <div class='nineteenth-panel panel'>group of ux designers</div>
-                    <div class='twentieth-panel panel'>group of engineers</div>
+                    <div class='twentieth-panel panel'>group of engineers</div> -->
                 </div> 
             </div>
             <div class='div4 div-container'>
-                <div class='twentyfirst-panel panel'>Currently He is trying to find new opportunites that will make him a better developer</div>
+                <div class='hackerman-div'>
+                   <img class='hackerman-last' src='assets/hackerman.gif' alt='Hacker-Man'/> 
+                </div>
+                
+                <!-- <div class='twentyfirst-panel panel'>Currently He is trying to find new opportunites that will make him a better developer</div>
                 <div class='twentysecond-panel panel'>Whether it be for front-end or back-end</div>
-                <div class='twentythird-panel panel'>as long as it is challenge and rewarding</div>
+                <div class='twentythird-panel panel'>as long as it is challenge and rewarding</div> -->
             </div>
             <div class='div4back div-container'>
                 <div class='div-small-container'>
