--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
                         </div>
                     </div>
                 </div>
-                
+            </div>
+            <div class='help-section-mobile'>
+                <div class='help-section-inside'>
+                    <div class="inside-position">
+                        <div class="inside-size">
+                            <button class='mobile-btn'>LEFT</button>
+                            <button class='mobile-btn'>RIGHT</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class='div1 div-container'>
                 <div class='comic-issue'>
@@ -25,11 +34,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class='bubble-containers'>
-                    <img class='comic-bubbles bubble1' src='https://i.imgur.com/BavnTiU.png' alt='front-end developer'/>
-                    <img class='comic-bubbles bubble2' src='https://i.imgur.com/Za6Ug1X.png' alt='web-developer'/>
-                    <img class='comic-bubbles bubble3' src='https://i.imgur.com/EcP8dTf.png' alt='software engineer'/>
-                </div> -->
                 <div class='title-container'>
                     <h1 class='name'>Calvin Kim</h1>
                     <p class='smaller-name'>The Origin</p>
