Changed graphic sizes and icons colors

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1 class='name'>Calvin Kim</h1>
                     <p class='smaller-name'>The Origin</p>
                 </div>
-                <img class='hackerman-gif' src='https://i.imgur.com/634DXZc.gif' alt='Hacker-Man'/>
+                <img class='hackerman-gif' src='https://i.imgur.com/byFLnY4.gif' alt='Hacker-Man'/>
                 <img class='skyline-img' src="https://i.imgur.com/iDcYsyl.png" alt='city skyline'/>
                 <div class="positions">
                     Front-End Developer -- Web-Developer -- Software Engineer
@@ -46,7 +46,7 @@
                         </div>
                         <div class='inside-panel-img'>
                             <div class="inside-position">
-                                <img class='panel1-img' src='https://i.imgur.com/oFj0kwt.png' alt='drivers license' />
+                                <img class='panel1-img' src='https://i.imgur.com/su5D2LO.png' alt='drivers license' />
                             </div>   
                         </div>   
                     </div>
@@ -54,7 +54,7 @@
                         <div class='yellow-textbox'>
                             Before Calvin started to code, he was a night-time stocker at a Grocery Store.
                         </div>
-                        <img class='panel2-gif' src='https://i.imgur.com/IAwV3yI.gif' alt='stocking shelf'/>
+                        <img class='panel2-gif' src='https://i.imgur.com/GxZLXz9.gif' alt='stocking shelf'/>
                     </div>
                     <div class='third-panel panel'>
                         <div class='yellow-textbox'>
@@ -68,14 +68,14 @@
             <div class='div2 div-container' id='3'>
                 <div class='div-small-front-container'>
                     <div class='fourth-panel panel'>
-                        <img class='panel4-img' src='https://i.imgur.com/rocw3BH.png' alt='spider conversation'/>
+                        <img class='panel4-img' src='https://i.imgur.com/EmEqjPY.png' alt='spider conversation'/>
                     </div>
                     
                     <div class='fifth-panel panel'>
-                        <img class='panel5-img' src='https://i.imgur.com/xCd7M6a.png' alt='spider talks'/>
+                        <img class='panel5-img' src='https://i.imgur.com/b18QZcR.png' alt='spider talks'/>
                     </div>
                     <div class='sixth-panel panel'>
-                        <img class='panel5a-img' src='https://i.imgur.com/ynxtTha.png' alt='spider conversation again'/>
+                        <img class='panel5a-img' src='https://i.imgur.com/RlWPGWV.png' alt='spider conversation again'/>
                         <div class='yellow-textbox to-bottom'>
                             After his encouraging words, the spider crawled away.
                         </div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class='inside-panel-img'>
                             <div class="inside-position">
-                                <img class='panel9-img' src='https://i.imgur.com/epXqqrQ.png' alt='Jumperfall'/>
+                                <img class='panel9-img' src='https://i.imgur.com/VWdcX2c.png' alt='Jumperfall'/>
                             </div>   
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                         <div class='yellow-textbox'>
                             After finishing JumperFall, He built many more games and fought many enemies.
                         </div>
-                        <img class='panel11-img' src='https://i.imgur.com/Ul6SRp6.png' alt='enemy'/>
+                        <img class='panel11-img' src='https://i.imgur.com/WSKnnKM.png' alt='enemy'/>
                     </div>
                 </div> 
             </div>
@@ -122,31 +122,31 @@
                             Calvin felt he needed to expand his knowledge so he learned web development.
                         </div>
                         <div class='icon-div'>
-                            <i class="devicon-html5-plain-wordmark colored skill-icons"></i>
+                            <i class="devicon-html5-plain-wordmark skill-icons"></i>
                         </div>
                         <div class='icon-div'>
-                            <i class="devicon-css3-plain-wordmark colored skill-icons"></i>
+                            <i class="devicon-css3-plain-wordmark skill-icons"></i>
                         </div>
                         <div class='icon-div'>
-                            <i class="devicon-javascript-plain colored skill-icons"></i>
+                            <i class="devicon-javascript-plain skill-icons"></i>
                         </div>
                         <div class='icon-div'>
-                            <i class="devicon-react-original-wordmark colored skill-icons"></i>
+                            <i class="devicon-react-original-wordmark skill-icons"></i>
                         </div>
                         <div class='icon-div'>
-                            <i class="devicon-nodejs-plain-wordmark colored skill-icons"></i>
+                            <i class="devicon-nodejs-plain-wordmark skill-icons"></i>
                         </div>
                         <div class='icon-div'>
-                            <i class="devicon-sequelize-plain-wordmark colored skill-icons"></i>
+                            <i class="devicon-sequelize-plain-wordmark skill-icons"></i>
                         </div>
                         <div class='icon-div'>
-                            <i class="devicon-express-original-wordmark colored skill-icons"></i>
+                            <i class="devicon-express-original-wordmark skill-icons"></i>
                         </div>
                         <div class='icon-div'>
-                            <i class="devicon-postgresql-plain-wordmark colored skill-icons"></i>
+                            <i class="devicon-postgresql-plain-wordmark skill-icons"></i>
                         </div>
                         <div class='icon-div'>
-                            <i class="devicon-rails-plain-wordmark colored skill-icons"></i>
+                            <i class="devicon-rails-plain-wordmark skill-icons"></i>
                         </div>
                     </div>
                     <div class='fifteenth-panel panel'>
@@ -154,7 +154,7 @@
                             With a variety of new skills. he created multiple web applications.
                         </div>
                         <h6 class='postcript'>**Links: <a href='http://haggle-app.surge.sh/' class='webapp-links' target="_blank">Haggle</a> <a href='http://best-l-i-f-e.surge.sh/' class='webapp-links' target="_blank">Best-Life</a> <a href='https://calvinkim4.github.io/Real-Life/' class='webapp-links' target="_blank">Real-Life</a> <a href='https://epic-jones-4619fa.netlify.com/' class='webapp-links' target="_blank">Made2Fit</a>**</h6>
-                        <img class='panel13-img' src='https://i.imgur.com/kfpL1dr.png' alt='hack cave'/>
+                        <img class='panel13-img' src='https://i.imgur.com/L9PbiDA.png' alt='hack cave'/>
                     </div>
                 </div>
                 
@@ -170,42 +170,42 @@
                     <div class='eighteenth-panel panel'>
                         <a class='profile' href='https://christinaatai.com/' rel="noopener noreferrer" target="_blank">Christina</a>
                         <a class='profile' href='https://christinaatai.com/' rel="noopener noreferrer" target="_blank">Tai</a>
-                        <img class='profile-img' src='https://i.imgur.com/p4QlQTw.png' alt='Christina' />
+                        <img class='profile-img' src='https://i.imgur.com/o5sa3Il.png' alt='Christina' />
                     </div>
                     <div class='nineteenth-panel panel'>
                         <a class='profile' href='https://www.kchiudesign.com/' rel="noopener noreferrer" target="_blank">Katherine</a>
                         <a class='profile' href='https://www.kchiudesign.com/' rel="noopener noreferrer" target="_blank">Chiu</a>
-                        <img class='profile-img' src='https://i.imgur.com/6rD2JpE.png' alt='Katherine' />
+                        <img class='profile-img' src='https://i.imgur.com/xZLXi4b.png' alt='Katherine' />
                     </div>
                     <div class='twentieth-panel panel'>
                         <a class='profile' href='https://www.mckenziewarren.com/' rel="noopener noreferrer" target="_blank">Mckenzie</a>
                         <a class='profile' href='https://www.mckenziewarren.com/' rel="noopener noreferrer" target="_blank">Warren</a>
-                        <img class='profile-img' src='https://i.imgur.com/32VcLpi.png' alt='Mckenzie' />
+                        <img class='profile-img' src='https://i.imgur.com/yRaXH3t.png' alt='Mckenzie' />
                     </div>
                     <div class='twentyfirst-panel panel'>
                         <a class='profile' href='https://www.suyoungmin.com/' rel="noopener noreferrer" target="_blank">Suyoung</a>
                         <a class='profile' href='https://www.suyoungmin.com/' rel="noopener noreferrer" target="_blank">Min</a>
-                        <img class='profile-img' src='https://i.imgur.com/DEqDiVq.png' alt='Suyoung' />
+                        <img class='profile-img' src='https://i.imgur.com/24yeA9Y.png' alt='Suyoung' />
                     </div>
                     <div class='twentysecond-panel panel'>
                         <a class='profile' href='http://www.codeloriana.com/' rel="noopener noreferrer" target="_blank">Loriana</a>
                         <a class='profile' href='http://www.codeloriana.com/' rel="noopener noreferrer" target="_blank">Hines</a>
-                        <img class='profile-img' src='https://i.imgur.com/O4CrhUO.png' alt='Loriana' />
+                        <img class='profile-img' src='https://i.imgur.com/5Tjgwqf.png' alt='Loriana' />
                     </div>
                     <div class='twentythird-panel panel'>
                         <a class='profile' href='http://www.shenae.nyc/' rel="noopener noreferrer" target="_blank">Shenae</a>
                         <a class='profile' href='http://www.shenae.nyc/' rel="noopener noreferrer" target="_blank">Simmons</a>
-                        <img class='profile-img' src='https://i.imgur.com/zRj2xhi.png' alt='Shenae' />
+                        <img class='profile-img' src='https://i.imgur.com/K48sCtV.png' alt='Shenae' />
                     </div>
                     <div class='twentyfourth-panel panel'>
                         <a class='profile' href='http://jackgay.herokuapp.com/' rel="noopener noreferrer" target="_blank">Jack</a>
                         <a class='profile' href='http://jackgay.herokuapp.com/' rel="noopener noreferrer" target="_blank">Gay</a>
-                        <img class='profile-img' src='https://i.imgur.com/6qphWwG.png' alt='Jack' />
+                        <img class='profile-img' src='https://i.imgur.com/D3gDkCL.png' alt='Jack' />
                     </div>
                     <div class='twentyfifth-panel panel'>
                         <a class='profile' href='https://fahad-developer.com/' rel="noopener noreferrer" target="_blank">Fahad</a>
                         <a class='profile' href='https://fahad-developer.com/' rel="noopener noreferrer" target="_blank">Hussain</a>
-                        <img class='profile-img' src='https://i.imgur.com/B43r9OS.png' alt='Fahad' />
+                        <img class='profile-img' src='https://i.imgur.com/Ab9ngRx.png' alt='Fahad' />
                     </div>
                 </div> 
             </div>
